# supabasic-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: client.rs  entities.rs  error.rs  lib.rs
tests/: client.rs  entities.rs  soft_delete.rs
