[package]
name = "supabase-rs"
version = "0.1.0"
edition = "2021"
authors = ["Dr. Ippy <jdplumbingsoflo@gmail.com>"]
license = "MIT"
repository = "https://github.com/JDPlumbing/supabase-rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

