[package]
name = "supabasic"
version = "0.2.2"
edition = "2021"
authors = ["Dr. Ippy <jdplumbingsoflo@gmail.com>"]
license = "MIT"
repository = "https://github.com/JDPlumbing/supabasic"
description = "Basic Supabase Api Crate"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
dotenvy = "0.15"
